Testsuite/ManualTests/3198/3198.c.gcov
        -:    0:Source:3198.c
        -:    0:Graph:3198.gcno
        -:    0:Data:3198.gcda
        -:    0:Runs:1
        -:    1:/* { dg-do compile } */
        -:    2:/* { dg-options "-Wunused-value -Werror" } */
        -:    3:
        1:    4:int main(void) { 0; } /* { dg-error "no effect" } */
        -:    5:
        -:    6:/* { dg-message "warnings being treated as errors" "" { target *-*-* } 0 } */
        -:    7:/* { dg-final { output-exists-not { target *-*-* } } } */
